--- a/bookmarks/templates/main_page.html
+++ b/bookmarks/templates/main_page.html
@@ -26,7 +26,7 @@
 <div class="col-md-8 col-md-offset-2" style="margin-top:50px">
   <table class="table table-striped">
     <tr>
-      <th>STT</th>
+      <th>STT tài khoản</th>
       <th>Tài khoản</th>
       <th>Mật khẩu</th>
       <th>Chức năng</th>
